--- a/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.html
+++ b/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.html
@@ -316,11 +316,11 @@
             <th class="head" pSortableColumn="sysModule">
               Ref No. <p-sortIcon field="sysModule"></p-sortIcon>
             </th>
-            <th class="head" pSortableColumn="clientCode">
-              Client <p-sortIcon field="clientCode"></p-sortIcon>
+            <th class="head" pSortableColumn="clientName">
+              Client <p-sortIcon field="clientName"></p-sortIcon>
             </th>
-            <th class="head" pSortableColumn="agentCode">
-              Intermediary <p-sortIcon field="agentCode"></p-sortIcon>
+            <th class="head" pSortableColumn="agentName">
+              Intermediary <p-sortIcon field="agentName"></p-sortIcon>
             </th>
             <th class="head" pSortableColumn="reporter">
               Ticket From <p-sortIcon field="reporter"></p-sortIcon>
