--- a/src/app/features/administration/components/tickets/authorization-tab/authorization-tab.component.html
+++ b/src/app/features/administration/components/tickets/authorization-tab/authorization-tab.component.html
@@ -75,25 +75,39 @@
         <td>
           <p-tableCheckbox [value]="exception"></p-tableCheckbox>
         </td>
-        <td>{{exception.code}}</td>
+        <td>{{exception.gexceptions_code}}</td>
         <td>
         <span *ngIf = "exception?.description" title="{{exception?.description}}">
-          {{exception?.description?.substring(0,10)}}...
+          {{exception?.description?.substring(0,10) | titlecase }}...
         </span>
         </td>
         <td>
-          <p-dropdown
-            [options]="completionRemarksData"
-            optionLabel="remark"
-            id="id"
-            [filter]="true"
-            filterBy="remark"
-            [showClear]="true"
-            [style]="{ 'width': '130px', 'height': '40px' }"
-            placeholder="Select remark"
-            appendTo="body"
-          >
-          </p-dropdown>
+          <ng-container *ngIf="!showDropdown">
+            <span title="{{selectedRemark}}" (click)="showDropdown = true">
+              {{ selectedRemark.substring(0, 28) | titlecase }}
+            </span>
+          </ng-container>
+
+          <ng-container *ngIf="showDropdown">
+            <p-dropdown
+              [options]="completionRemarksData"
+              [(ngModel)]="selectedRemark"
+              optionLabel="remark"
+              optionValue="remark"
+              id="code"
+              [filter]="true"
+              filterBy="remark"
+              [showClear]="true"
+              [style]="{ 'width': '130px', 'height': '40px' }"
+              placeholder="Select remark"
+              appendTo="body"
+              (onChange)="onDropdownChange()"
+            >
+              <ng-template let-remark pTemplate="item">
+                <div title="{{remark.remark}}">{{ remark.remark.length > 10 ? remark.remark.substring(0, 28) + '...' : remark.remark }}</div>
+              </ng-template>
+            </p-dropdown>
+          </ng-container>
         </td>
         <td>{{exception?.set_standard}}</td>
         <td>{{exception?.used_standard}}</td>
@@ -328,9 +342,9 @@
           </form>
         </div>
       </div>
-      <!--<div class="modal-footer">
-        <button class="btn btn-primary" data-bs-target="#debtOwnerToggle" data-bs-toggle="modal">Back to debt owner</button>
-      </div>-->
+      <div class="modal-footer">
+        <button class="btn btn-primary" (click)="onAuthorize()">Authorize</button>
+      </div>
     </div>
   </div>
 </div>
