VQ-1392:Solved add another risk error

--- a/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.html
+++ b/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.html
@@ -141,7 +141,7 @@
                                     <button type="button" data-bs-dismiss="modal" class="btn btn-link"> Back</button>
                                 </div>
                                 <div class="col-6 d-flex justify-content-end">
-                                    <button class="btn btn-primary" type="submit" id="btnCoverTypes" data-bs-dismiss="modal" (click)="onCreateRiskSection();createQuotation();">Update quote</button>
+                                    <button class="btn btn-primary" type="submit" id="btnCoverTypes" data-bs-dismiss="modal" (click)="createQuotation();">Update quote</button>
                                 </div>
     
                             </div>
