--- a/src/app/features/administration/components/tickets/ticket-details/ticket-details.component.html
+++ b/src/app/features/administration/components/tickets/ticket-details/ticket-details.component.html
@@ -146,7 +146,10 @@
 
     <ng-container *ngIf="selectedSpringTickets?.ticket?.sysModule === 'C'">
       <p-tabPanel header="Claim details">
-        <app-claim-details></app-claim-details>
+        <app-claim-details [selectedSpringTickets]="selectedSpringTickets"></app-claim-details>
+      </p-tabPanel>
+      <p-tabPanel header="Revision details">
+        <app-revision-details></app-revision-details>
       </p-tabPanel>
     </ng-container>
 
@@ -171,11 +174,11 @@
       >
         Authorize
       </button>
-<!--TODO hide reinsure button in other tabs-->
+
       <button
         class="btn btn-primary ms-2 reinsure-btn"
         (click)="onClickReinsure()"
-        *ngIf="activeIndex === 1"
+        *ngIf="activeIndex === 1 && selectedSpringTickets?.ticket?.sysModule === 'P' "
       >
         Reinsure
       </button>
